--- a/site/package.json
+++ b/site/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "projeto-acquatec",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
+  "name": "site",
+  "version": "0.0.1",
+  "private":true,
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon --exec node app.js"
+    "start": "node ./site/app.js",
+    "dev": "cd site && npm install"
   },
   "author": "Feito pelos desenvolvedores @ São Paulo Tech School / Bandtec Digital School",
   "license": "MIT",
