--- a/site/package.json
+++ b/site/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "site",
-  "version": "0.0.1",
-  "private":true,
+  "name": "projeto-acquatec",
+  "version": "1.0.0",
+  "description": "",
+  "main": "app.js",
   "scripts": {
-    "start": "node ./site/app.js",
-    "dev": "cd site && npm install"
+    "start": "node app.js",
+    "dev": "nodemon --exec node app.js"
   },
   "author": "Feito pelos desenvolvedores @ São Paulo Tech School / Bandtec Digital School",
   "license": "MIT",
